add new fes cards

--- a/index.html
+++ b/index.html
@@ -796,6 +796,24 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
+                    <div class="card fes-card fes3-maki__card">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/085_fes3_maki.png" />
+                        <div class="signature fes3-maki__signature">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/maki.png" />
+                        </div>
+                        <div class="limitbreak fes3-maki__limitbreak">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
+                        </div>
+                    </div>
+                    <div class="card fes-card fes3-riko__card">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/086_fes3_riko.png" />
+                        <div class="signature fes3-riko__signature">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/riko.png" />
+                        </div>
+                        <div class="limitbreak fes3-riko__limitbreak">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- <div class="section section__fes4">
