--- a/museaquaniji.html
+++ b/museaquaniji.html
@@ -26,6 +26,69 @@
                     <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/sidebar/1st_fes.png" />
                 </div>
                 <div class="background background__fes1">
+                    <div class="card fes-card fes1-honoka__card">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/021_fes1_honoka.png" />
+                        <div class="signature fes1-honoka__signature">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/honoka.png" />
+                        </div>
+                        <div class="limitbreak fes1-honoka__limitbreak">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
+                        </div>
+                    </div>
+                    <div class="card fes-card fes1-eli__card">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/016_fes1_eli.png" />
+                        <div class="signature fes1-eli__signature">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/eli.png" />
+                        </div>
+                        <div class="limitbreak fes1-eli__limitbreak">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
+                        </div>
+                    </div>
+                    <div class="card fes-card fes1-kotori__card">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/004_fes1_kotori.png" />
+                        <div class="signature fes1-kotori__signature">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/kotori.png" />
+                        </div>
+                        <div class="limitbreak fes1-kotori__limitbreak">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
+                        </div>
+                    </div>
+                    <div class="card fes-card fes1-chika__card">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/017_fes1_chika.png" />
+                        <div class="signature fes1-chika__signature">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/chika.png" />
+                        </div>
+                        <div class="limitbreak fes1-chika__limitbreak">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
+                        </div>
+                    </div>
+                    <div class="card fes-card fes1-riko__card">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/022_fes1_riko.png" />
+                        <div class="signature fes1-riko__signature">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/riko.png" />
+                        </div>
+                        <div class="limitbreak fes1-riko__limitbreak">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
+                        </div>
+                    </div>
+                    <div class="card fes-card fes1-kanan__card">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/023_fes1_kanan.png" />
+                        <div class="signature fes1-kanan__signature">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/kanan.png" />
+                        </div>
+                        <div class="limitbreak fes1-kanan__limitbreak">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
+                        </div>
+                    </div>
+                    <div class="card fes-card fes1-ayumu__card">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/027_fes1_ayumu.png" />
+                        <div class="signature fes1-ayumu__signature">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/ayumu.png" />
+                        </div>
+                        <div class="limitbreak fes1-ayumu__limitbreak">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
+                        </div>
+                    </div>
                     <div class="card fes-card fes1-maki__card">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/001_fes1_maki.png" />
                         <div class="signature fes1-maki__signature">
@@ -50,15 +113,6 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/karin.png" />
                         </div>
                         <div class="limitbreak fes1-karin__limitbreak">
-                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
-                        </div>
-                    </div>
-                    <div class="card fes-card fes1-kotori__card">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/004_fes1_kotori.png" />
-                        <div class="signature fes1-kotori__signature">
-                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/kotori.png" />
-                        </div>
-                        <div class="limitbreak fes1-kotori__limitbreak">
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
@@ -161,15 +215,6 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
-                    <div class="card fes-card fes1-eli__card">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/016_fes1_eli.png" />
-                        <div class="signature fes1-eli__signature">
-                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/eli.png" />
-                        </div>
-                        <div class="limitbreak fes1-eli__limitbreak">
-                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
-                        </div>
-                    </div>
                     <div class="card fes-card fes1-chika__card">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/017_fes1_chika.png" />
                         <div class="signature fes1-chika__signature">
@@ -206,33 +251,6 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
-                    <div class="card fes-card fes1-honoka__card">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/021_fes1_honoka.png" />
-                        <div class="signature fes1-honoka__signature">
-                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/honoka.png" />
-                        </div>
-                        <div class="limitbreak fes1-honoka__limitbreak">
-                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
-                        </div>
-                    </div>
-                    <div class="card fes-card fes1-riko__card">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/022_fes1_riko.png" />
-                        <div class="signature fes1-riko__signature">
-                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/riko.png" />
-                        </div>
-                        <div class="limitbreak fes1-riko__limitbreak">
-                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
-                        </div>
-                    </div>
-                    <div class="card fes-card fes1-kanan__card">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/023_fes1_kanan.png" />
-                        <div class="signature fes1-kanan__signature">
-                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/kanan.png" />
-                        </div>
-                        <div class="limitbreak fes1-kanan__limitbreak">
-                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
-                        </div>
-                    </div>
                     <div class="card fes-card fes1-kasumi__card">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/024_fes1_kasumi.png" />
                         <div class="signature fes1-kasumi__signature">
@@ -260,15 +278,6 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
-                    <div class="card fes-card fes1-ayumu__card">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/027_fes1_ayumu.png" />
-                        <div class="signature fes1-ayumu__signature">
-                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/ayumu.png" />
-                        </div>
-                        <div class="limitbreak fes1-ayumu__limitbreak">
-                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
-                        </div>
-                    </div>
                     <div class="card fes-card fes1-shioriko__card">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/fes/028_fes1_shioriko.png" />
                         <div class="signature fes1-shioriko__signature">
@@ -277,6 +286,12 @@
                         <div class="limitbreak fes1-shioriko__limitbreak">
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
+                    </div>
+                    <div class="logo">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/test/logo/mia.png"/>
+                    </div>
+                    <div class="logo">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/test/logo/lanzhu.png"/>
                     </div>
                 </div>
             </div>
