--- a/index.html
+++ b/index.html
@@ -278,6 +278,12 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
+                    <div class="logo">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/test/logo/mia.png"/>
+                    </div>
+                    <div class="logo">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/test/logo/lanzhu.png"/>
+                    </div>
                 </div>
             </div>
             <div class="section section__fes2">
@@ -536,6 +542,12 @@
                         <div class="limitbreak fes2-mari__limitbreak">
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
+                    </div>
+                    <div class="logo">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/test/logo/mia.png"/>
+                    </div>
+                    <div class="logo">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/test/logo/lanzhu.png"/>
                     </div>
                 </div>
             </div>
