--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
-                    <div class="logo">
+                    <div class="logo fes1-mia__card">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/test/logo/mia.png"/>
                     </div>
-                    <div class="logo">
+                    <div class="logo fes1-lanzhu__card">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/test/logo/lanzhu.png"/>
                     </div>
                 </div>
@@ -543,10 +543,10 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
-                    <div class="logo">
+                    <div class="logo fes2-mia__card">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/test/logo/mia.png"/>
                     </div>
-                    <div class="logo">
+                    <div class="logo fes2-lanzhu__card">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/test/logo/lanzhu.png"/>
                     </div>
                 </div>
@@ -1082,6 +1082,15 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
+                    <div class="logo party1-ruby__card">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/test/logo/ruby.png"/>
+                    </div>
+                    <div class="logo party1-ayumu__card">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/test/logo/ayumu.png"/>
+                    </div>
+                    <div class="logo party1-nozomi__card">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/test/logo/nozomi.png"/>
+                    </div>
                 </div>
             </div>
             <!-- <div class="section section__party2">
@@ -1163,7 +1172,7 @@
                 <button class="button copyDataModalButton closeButton" type="button" onclick="copyDataModal.close();">Close</button>
             </div>
         </dialog>
-        <button class="button idolizedSwitch" type="button">Idolized<br>ON/OFF</button>
+        <button class="button idolizedSwitch" type="button">Idolized<br>OFF</button>
     </div>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
     <script src="app.js"></script>
