--- a/index.html
+++ b/index.html
@@ -1151,7 +1151,7 @@
                 <button class="button copyDataModalButton closeButton" type="button" onclick="copyDataModal.close();">Close</button>
             </div>
         </dialog>
-        <button class="button idolizedSwitch" type="button">Idolized<br>ON/OFF</button>
+        <button class="button idolizedSwitch" type="button">Idolized<br>OFF</button>
     </div>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
     <script src="app.js"></script>
