--- a/index.html
+++ b/index.html
@@ -278,11 +278,11 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
-                    <div class="logo fes1-mia__card">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/test/logo/mia.png"/>
+                    <div class="logo fes1-logo">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/logo/mia.png"/>
                     </div>
-                    <div class="logo fes1-lanzhu__card">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/test/logo/lanzhu.png"/>
+                    <div class="logo fes1-logo">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/logo/lanzhu.png"/>
                     </div>
                 </div>
             </div>
@@ -543,11 +543,11 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
-                    <div class="logo fes2-mia__card">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/test/logo/mia.png"/>
+                    <div class="logo fes2-logo">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/logo/mia.png"/>
                     </div>
-                    <div class="logo fes2-lanzhu__card">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/test/logo/lanzhu.png"/>
+                    <div class="logo fes2-logo">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/logo/lanzhu.png"/>
                     </div>
                 </div>
             </div>
@@ -1082,14 +1082,14 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
-                    <div class="logo party1-ruby__card">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/test/logo/ruby.png"/>
+                    <div class="logo party1-logo">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/logo/ayumu.png"/>
                     </div>
-                    <div class="logo party1-ayumu__card">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/test/logo/ayumu.png"/>
+                    <div class="logo party1-logo">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/logo/nozomi.png"/>
                     </div>
-                    <div class="logo party1-nozomi__card">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/test/logo/nozomi.png"/>
+                    <div class="logo party1-logo">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/logo/ruby.png"/>
                     </div>
                 </div>
             </div>
