--- a/index.html
+++ b/index.html
@@ -278,11 +278,11 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
-                    <div class="logo fes1-logo">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/logo/mia.png"/>
+                    <div class="icon fes-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/mia.png"/>
                     </div>
-                    <div class="logo fes1-logo">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/logo/lanzhu.png"/>
+                    <div class="icon fes-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/lanzhu.png"/>
                     </div>
                 </div>
             </div>
@@ -543,11 +543,11 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
-                    <div class="logo fes2-logo">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/logo/mia.png"/>
+                    <div class="icon fes-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/mia.png"/>
                     </div>
-                    <div class="logo fes2-logo">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/logo/lanzhu.png"/>
+                    <div class="icon fes-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/lanzhu.png"/>
                     </div>
                 </div>
             </div>
@@ -1082,14 +1082,14 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
-                    <div class="logo party1-logo">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/logo/ayumu.png"/>
+                    <div class="icon party-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/ayumu.png"/>
                     </div>
-                    <div class="logo party1-logo">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/logo/nozomi.png"/>
+                    <div class="icon party-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/nozomi.png"/>
                     </div>
-                    <div class="logo party1-logo">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/logo/ruby.png"/>
+                    <div class="icon party-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/ruby.png"/>
                     </div>
                 </div>
             </div>
@@ -1140,6 +1140,84 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/honoka.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/eli.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/chika.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/riko.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/kanan.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/ayumu.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/kasumi.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/shizuku.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/karin.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/umi.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/rin.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/maki.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/you.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/ai.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/kanata.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/setsuna.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/nozomi.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/hanayo.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/nico.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/hanamaru.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/mari.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/ruby.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/rina.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/shioriko.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/mia.png"/>
+                    </div>
+                    <div class="icon normal-icon">
+                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/lanzhu.png"/>
+                    </div>
                 </div>
             </div>
         </div>
@@ -1173,6 +1251,7 @@
             </div>
         </dialog>
         <button class="button idolizedSwitch" type="button">Idolized<br>OFF</button>
+        <button class="button sortByGroupSwitch" type="button">Sort by<br>Group<br>OFF</button>
     </div>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
     <script src="app.js"></script>
