add Sort by Group function

--- a/index.html
+++ b/index.html
@@ -1251,7 +1251,9 @@
             </div>
         </dialog>
         <button class="button idolizedSwitch" type="button">Idolized<br>OFF</button>
-        <button class="button sortByGroupSwitch" type="button">Sort by<br>Group<br>OFF</button>
+    </div>
+    <div class="buttonframe">
+        <button class="button sortByGroupSwitch" type="button">Sort by Group OFF</button>
     </div>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
     <script src="app.js"></script>
