Add new crazy normal UR Cards (Rin, kanan)

--- a/index.html
+++ b/index.html
@@ -2076,6 +2076,40 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
+                    <div class="card normal-card rin">
+                        <div class="unidolized">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/normal/005_normal_rin.png" />
+                        </div>
+                        <div class="idolized displayNone">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/normal/005_normal_rin_idolized.png" />
+                        </div>
+                        <div class="rainbow displayNone invisible">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/rainbow/rainbow.png" />
+                        </div>
+                        <div class="signature rin__signature invisible">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/rin.png" />
+                        </div>
+                        <div class="limitbreak rin__limitbreak">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
+                        </div>
+                    </div>
+                    <div class="card normal-card kanan">
+                        <div class="unidolized">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/normal/006_normal_kanan.png" />
+                        </div>
+                        <div class="idolized displayNone">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/normal/006_normal_kanan_idolized.png" />
+                        </div>
+                        <div class="rainbow displayNone invisible">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/rainbow/rainbow.png" />
+                        </div>
+                        <div class="signature kanan__signature invisible">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/kanan.png" />
+                        </div>
+                        <div class="limitbreak kanan__limitbreak">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
+                        </div>
+                    </div>
                     <div class="icon honoka displayNone">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/honoka.png"/>
                     </div>
@@ -2087,9 +2121,6 @@
                     </div>
                     <div class="icon riko displayNone">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/riko.png"/>
-                    </div>
-                    <div class="icon kanan displayNone">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/kanan.png"/>
                     </div>
                     <div class="icon ayumu displayNone">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/ayumu.png"/>
@@ -2105,9 +2136,6 @@
                     </div>
                     <div class="icon umi displayNone">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/umi.png"/>
-                    </div>
-                    <div class="icon rin displayNone">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/rin.png"/>
                     </div>
                     <div class="icon maki displayNone">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/maki.png"/>
