--- a/index.html
+++ b/index.html
@@ -2192,15 +2192,15 @@
                 <div class="input_body">
                     <div>
                         <label for="fes_data">fes_data:</label>
-                        <input id="fes_data" type="text" onkeyup="this.value=this.value.replace(/[^0-6]/g,'');" oninput="fesDataHandleOnInput(this)" />
+                        <input id="fes_data" type="text" />
                     </div>
                     <div>
                         <label for="party_data">party_data:</label>
-                        <input id="party_data" type="text" onkeyup="this.value=this.value.replace(/[^0-6]/g,'');" oninput="partyDataHandleOnInput(this)" />
+                        <input id="party_data" type="text" />
                     </div>
                     <div>
                         <label for="normal_data">normal_data:</label>
-                        <input id="normal_data" type="text" onkeyup="this.value=this.value.replace(/[^0-6]/g,'');" oninput="normalDataHandleOnInput(this)" />
+                        <input id="normal_data" type="text" />
                     </div>
                 </div>
                 <button class="button applyDataButton" type="button">Apply<br>Data</button>
