--- a/index.html
+++ b/index.html
@@ -2240,6 +2240,17 @@
                 <button class="button modalSmallButton settingsModalCloseButton" type="button">Close</button>
             </div>
         </dialog>
+        <div class="profile">
+            <a href="https://twitter.com/niihiihii">
+                <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/profile/twitter.png"/>
+            </a>
+            <a href="https://twitch.tv/nihiihii">
+                <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/profile/twitch.png"/>
+            </a>
+            <a href="https://github.com/niihiihii">
+                <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/profile/github.png"/>
+            </a>
+        </div>
     </div>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
     <script src="app.js"></script>
