--- a/index.html
+++ b/index.html
@@ -1986,14 +1986,28 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
+                    <div class="card party-card ruby">
+                        <div class="unidolized">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/party/028_party1_ruby.png" />
+                        </div>
+                        <div class="idolized displayNone">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/party/028_party1_ruby_idolized.png" />
+                        </div>
+                        <div class="rainbow invisible displayNone">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/rainbow/rainbow.png" />
+                        </div>
+                        <div class="signature invisible animation">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/ruby.png" />
+                        </div>
+                        <div class="limitbreak">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
+                        </div>
+                    </div>
                     <div class="icon ayumu displayNone">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/ayumu.png"/>
                     </div>
                     <div class="icon nozomi displayNone">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/nozomi.png"/>
-                    </div>
-                    <div class="icon ruby displayNone">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/ruby.png"/>
                     </div>
                 </div>
             </div>
