add Crazy Normal UR Card (umi)

--- a/index.html
+++ b/index.html
@@ -2124,6 +2124,23 @@
                             <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
                         </div>
                     </div>
+                    <div class="card normal-card umi">
+                        <div class="unidolized">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/normal/007_normal_umi.png" />
+                        </div>
+                        <div class="idolized displayNone">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/normal/007_normal_umi_idolized.png" />
+                        </div>
+                        <div class="rainbow invisible invisible2">
+                            <img class="animation" src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/rainbow/rainbow.png" />
+                        </div>
+                        <div class="signature invisible">
+                            <img class="animation" src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/signatures/umi.png" />
+                        </div>
+                        <div class="limitbreak">
+                            <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/overlay.png" />
+                        </div>
+                    </div>
                     <div class="icon honoka displayNone">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/honoka.png"/>
                     </div>
@@ -2147,9 +2164,6 @@
                     </div>
                     <div class="icon karin displayNone">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/karin.png"/>
-                    </div>
-                    <div class="icon umi displayNone">
-                        <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/umi.png"/>
                     </div>
                     <div class="icon maki displayNone">
                         <img src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/icon/maki.png"/>
@@ -2248,8 +2262,8 @@
                         <img class="sampleImg" src="https://raw.githubusercontent.com/niihiihii/sifas_fesparty_statusboard/main/limitbreak/limitbreak5.png" />
                     </div>
                 </div>
-                <button class="button changeCardStyleButton" type="button">Signature</button>
-                <button class="button sortByGroupSwitch" type="button">Sort by Group OFF</button>
+                <button class="button modalLongButton changeCardStyleButton" type="button">Signature</button>
+                <button class="button modalLongButton sortByGroupSwitch" type="button">Sort by Group OFF</button>
                 <button class="button modalSmallButton idolizedSwitch" type="button">Idolized<br>OFF</button>
                 <button class="button modalSmallButton settingsModalCloseButton" type="button">Close</button>
             </div>
